[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/location/Road.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/chapters/ChapterRoad.gd" type="Script" id=2]
[ext_resource path="res://scenes/props/road/CarInside.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/props/road/Car.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/car-crash.ogg" type="AudioStream" id=6]

[sub_resource type="BoxShape" id=1]

[node name="ChapterRoad" type="Spatial" groups=[
"chapter",
]]
script = ExtResource( 2 )

[node name="Road" parent="." instance=ExtResource( 1 )]

[node name="LineA" type="Spatial" parent="Road"]

[node name="Car" parent="Road/LineA" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -54.4081, 0, 0 )

[node name="LineB" type="Spatial" parent="Road"]

[node name="Car" parent="Road/LineB" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 63.6307, 0, 0 )

[node name="Car2" parent="Road/LineB" instance=ExtResource( 5 )]
transform = Transform( 0.43218, 0, -0.901787, 0, 1, 0, 0.901787, 0, 0.43218, 26.0224, 0, 54.2983 )

[node name="CarInside" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 59.6042, 0, 0 )

[node name="SpotLight" type="SpotLight" parent="CarInside"]
transform = Transform( 1, 0, 0, 0, -0.941905, 0.335879, 0, -0.335879, -0.941905, 0, 2.52261, 2.06507 )
light_color = Color( 0.796078, 0.654902, 0.00784314, 1 )
light_energy = 3.24
spot_range = 22.4581

[node name="SpotLight2" type="SpotLight" parent="CarInside"]
transform = Transform( 1, 0, 0, 0, -0.739079, 0.673619, 0, -0.673619, -0.739079, 0, 2.07161, -0.966172 )
light_color = Color( 0.843137, 0.843137, 0.843137, 1 )
light_energy = 1.95
spot_range = 3.88123

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="Crash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.9

[node name="LeftSide" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 70.2586, 0, 0 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="LeftSide"]
shape = SubResource( 1 )

[node name="RightSide" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 46.7872, 0, 0 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="RightSide"]
shape = SubResource( 1 )
[connection signal="area_entered" from="LeftSide" to="." method="_on_LeftSide_area_entered"]
[connection signal="area_entered" from="RightSide" to="." method="_on_RightSide_area_entered"]
